<resources>
    <string name="app_name">MyMovie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="movie_error_retry">Retry</string>
    <string name="movies_empty_data_label">We are preparing the list of top trending movies</string>
    <string name="movies_error_label">Unexpected Error Happened Please Try Again</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_sorting">No Sorting</string>
    <string name="alphabetical_sorting">Sort: A-Z</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create New Account</string>
    <string name="address">Address</string>
    <string name="age">Age</string>
    <string name="registration">Registration</string>
    <string name="logOut">Logout</string>
    <string name="update">Update</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="movie">Movie</string>
    <string name="repeat_password">Confirm Password</string>
</resources>