<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:context=".ui.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:text="@string/app_name"
            android:textColor="@color/default_color"
            android:textSize="55sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.878" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:backgroundTint="@color/black"
            android:hint="@string/username"
            android:inputType="text"
            android:layout_marginTop="232dp"
            android:padding="16dp"
            android:maxLines="1"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:backgroundTint="@color/black"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@id/et_username"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:backgroundTint="@color/default_color"
            app:layout_constraintTop_toBottomOf="@id/et_password"/>

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:backgroundTint="@color/default_color"
            app:layout_constraintTop_toBottomOf="@id/btnLogin"/>

        <Button
            android:id="@+id/btnAuth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Auth"
            android:backgroundTint="@color/default_color"
            app:layout_constraintTop_toBottomOf="@id/btnCreateAccount"/>


        <Button
            android:id="@+id/btnCrash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Crash"
            android:backgroundTint="@color/default_color"
            app:layout_constraintTop_toBottomOf="@id/btnAuth"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>